Update instructions and viewer dimensions

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <div class="instruction">
       <p class="title">Instruction 1</p>
       <p>You need to have a bluetooth receiver on your PC/Mac and it should be activated.</p>
+      <p>Make your BBC:Microbit ready for Bluetooth by downloading this <a href="#">.hex file</a> and copy it into you microbit
+      as you usually dp to load your program on it.</p>
     </div>
     <div class="instruction">
       <p class="title">Instruction 2</p>
-      <p>Clic the <strong>start</strong> button to pair a running, bluetooth enabled BBC:Microbit.</p>
-      <p>To enable you BBC:Microbit for Bluetooth, download this <a href="#">.hex file</a> and copy it into you microbit.
-      </p>
+      <p>When you're ready, click the <strong>start</strong> button to pair your microbit with your internet browser.</p>
     </div>
   <div class="interactive">
     <div class="button" id="start">Start</div>
