Fix link to hex file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="instruction">
       <p class="title">Instruction 1</p>
       <p>You need to have a bluetooth receiver on your PC/Mac and it should be activated.</p>
-      <p>Make your BBC:Microbit ready for Bluetooth by downloading this <a href="#">.hex file</a> and copy it into you microbit
+      <p>Make your BBC:Microbit ready for Bluetooth by downloading this <a href="./hex/microbit-bluetooth-accel.hex">.hex file</a> and copy it into you microbit
       as you usually dp to load your program on it.</p>
     </div>
     <div class="instruction">
